add login activity

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,10 +16,10 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/bigsquare" />
+        app:srcCompat="@drawable/register_bigsquare" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/register_imageview_backbutton"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginStart="21dp"
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/register_imageview_hiasan1"
         android:layout_width="490.5dp"
         android:layout_height="228.45dp"
         android:layout_marginStart="38dp"
@@ -65,7 +65,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/hiasan1" />
+        app:srcCompat="@drawable/register_hiasan1" />
 
     <EditText
         android:id="@+id/register_edittext_email"
@@ -177,7 +177,7 @@
         android:layout_marginTop="21dp"
         app:layout_constraintStart_toEndOf="@+id/register_edittext_password"
         app:layout_constraintTop_toBottomOf="@+id/register_edittext_email"
-        app:srcCompat="@drawable/eye" />
+        app:srcCompat="@drawable/seepassword" />
 
     <Button
         android:id="@+id/register_button_daftar"
