--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,6 +8,19 @@
     tools:context=".RegisterActivity">
 
     <ImageView
+        android:id="@+id/register_imageview_hiasan1"
+        android:layout_width="490.5dp"
+        android:layout_height="228.45dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginEnd="41.5dp"
+        android:layout_marginBottom="2.55dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/register_hiasan1" />
+
+    <ImageView
         android:id="@+id/imageView"
         android:layout_width="411dp"
         android:layout_height="754dp"
@@ -26,7 +39,9 @@
         android:layout_marginTop="27.45dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/backbuttonwhite" />
+        app:srcCompat="@drawable/backbuttonwhite"
+        android:clickable="true"
+        android:onClick="pindahsplashactivity"/>
 
     <TextView
         android:id="@+id/textView"
@@ -53,19 +68,6 @@
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/register_imageview_hiasan1"
-        android:layout_width="490.5dp"
-        android:layout_height="228.45dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginEnd="41.5dp"
-        android:layout_marginBottom="2.55dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/register_hiasan1" />
 
     <EditText
         android:id="@+id/register_edittext_email"
@@ -190,6 +192,33 @@
         android:fontFamily="@font/poppins_bold"
         android:text="DAFTAR"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/register_edittext_notelepon" />
+        app:layout_constraintTop_toBottomOf="@+id/register_edittext_notelepon"/>
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="11dp"
+        android:fontFamily="@font/poppins_medium"
+        android:text="Sudah Punya Akun?"
+        android:textColor="#FFFFFF"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register_button_daftar" />
+
+    <TextView
+        android:id="@+id/register_textview_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="11dp"
+        android:clickable="true"
+        android:fontFamily="@font/poppins_bold"
+        android:onClick="pindahloginactivity"
+        android:text="Login"
+        android:textColor="#FFFFFF"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/register_button_daftar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
