add card_home layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="hitammuda">#171717</color>
+    <color name="hitamagakmuda">#3F3F3F</color>
+    <color name="yellowstar">#FFC03F</color>
 </resources>
