--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="hitammuda">#171717</color>
     <color name="hitamagakmuda">#3F3F3F</color>
     <color name="yellowstar">#FFC03F</color>
+    <color name="birumuda">#1F293B</color>
 </resources>
