--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,8 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/hitammuda"
+    android:background="@color/birumuda"
     tools:context=".HomeActivity">
+
+    <ImageView
+        android:id="@+id/home_imageview_hiasan2"
+        android:layout_width="659dp"
+        android:layout_height="673dp"
+        android:layout_marginStart="113dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginBottom="646dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/home_circle2" />
 
     <ImageView
         android:id="@+id/home_imageview_hiasan"
@@ -13,12 +26,12 @@
         android:layout_height="680dp"
         android:layout_marginStart="113dp"
         android:layout_marginEnd="135dp"
-        android:layout_marginBottom="646dp"
+        android:layout_marginBottom="668dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/hiasanbulet" />
+        app:srcCompat="@drawable/home_circle1" />
 
     <ImageView
         android:id="@+id/home_imageview_morebutton"
@@ -47,8 +60,8 @@
         android:layout_marginStart="162dp"
         android:layout_marginTop="39dp"
         android:fontFamily="@font/poppins_bold"
-        android:text="Halo, Iravn!"
-        android:textColor="#000000"
+        android:text="Halo, Irvan!"
+        android:textColor="#1F293B"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -61,7 +74,7 @@
         android:layout_marginTop="63dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="Level Expert"
-        android:textColor="#000000"
+        android:textColor="#35445F"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -74,7 +87,7 @@
         android:layout_marginTop="81dp"
         android:fontFamily="@font/poppins"
         android:text="Back End"
-        android:textColor="#000000"
+        android:textColor="#1F293B"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
