--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,14 +22,14 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="411dp"
-        android:layout_height="754dp"
-        android:layout_marginTop="208dp"
+        android:layout_width="412dp"
+        android:layout_height="652dp"
+        android:layout_marginTop="213dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/register_bigsquare" />
+        app:srcCompat="@drawable/register_kotakbesar" />
 
     <ImageView
         android:id="@+id/home_imageview_backbutton"
@@ -104,27 +104,10 @@
         app:layout_constraintTop_toBottomOf="@+id/register_edittext_password" />
 
     <EditText
-        android:id="@+id/register_edittext_jeniskelamin"
-        android:layout_width="287dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="62dp"
-        android:layout_marginTop="21dp"
-        android:background="@drawable/edittext"
-        android:ems="10"
-        android:fontFamily="@font/poppins_bold"
-        android:hint="Jenis Kelamin"
-        android:inputType="textPersonName"
-        android:paddingLeft="18dp"
-        android:textColor="#939393"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/register_edittext_namapanggilan" />
-
-    <EditText
         android:id="@+id/register_edittext_notelepon"
         android:layout_width="287dp"
         android:layout_height="50dp"
-        android:layout_marginStart="62dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="21dp"
         android:background="@drawable/edittext"
         android:ems="10"
@@ -135,7 +118,7 @@
         android:textColor="#939393"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/register_edittext_jeniskelamin" />
+        app:layout_constraintTop_toBottomOf="@+id/register_edittext_namapanggilan" />
 
     <EditText
         android:id="@+id/register_edittext_namapanggilan"
@@ -179,27 +162,27 @@
         android:layout_marginTop="21dp"
         app:layout_constraintStart_toEndOf="@+id/register_edittext_password"
         app:layout_constraintTop_toBottomOf="@+id/register_edittext_email"
-        app:srcCompat="@drawable/seepassword" />
+        app:srcCompat="@drawable/see_password" />
 
     <Button
         android:id="@+id/register_button_daftar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="113dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="39dp"
         android:background="@drawable/button"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/poppins_bold"
         android:text="DAFTAR"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/register_edittext_notelepon"/>
+        app:layout_constraintTop_toBottomOf="@+id/register_edittext_notelepon" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/register_textView_sudahpunyaakun"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="124dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/poppins_medium"
         android:text="Sudah Punya Akun?"
         android:textColor="#FFFFFF"
@@ -211,14 +194,14 @@
         android:id="@+id/register_textview_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="5dp"
         android:clickable="true"
         android:fontFamily="@font/poppins_bold"
         android:onClick="pindahloginactivity"
         android:text="Login"
         android:textColor="#FFFFFF"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintStart_toEndOf="@+id/register_textView_sudahpunyaakun"
         app:layout_constraintTop_toBottomOf="@+id/register_button_daftar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
