2 Huge Update (layout update)

--- a/app/src/main/res/layout/card_restaurant_detail.xml
+++ b/app/src/main/res/layout/card_restaurant_detail.xml
@@ -21,10 +21,10 @@
             android:id="@+id/cardhome_edittext_review"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginStart="17dp"
+            android:layout_marginTop="25dp"
             android:fontFamily="@font/poppins_bold"
-            android:text="Review"
+            android:text="Restorannya Bersih bangett!"
             android:textColor="#25242A"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent" />
@@ -33,10 +33,9 @@
             android:id="@+id/cardhome_edittext_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginStart="17dp"
             android:fontFamily="@font/poppins_medium"
-            android:text="Tanggal"
+            android:text="22 Januari 2022"
             android:textColor="#3F3F3F"
             android:textSize="12sp"
             card_view:layout_constraintStart_toStartOf="parent"
@@ -46,10 +45,9 @@
             android:id="@+id/cardhome_edittext_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginStart="17dp"
             android:fontFamily="@font/poppins_medium"
-            android:text="Nama"
+            android:text="Donald Trump"
             android:textColor="#606060"
             android:textSize="12sp"
             card_view:layout_constraintStart_toStartOf="parent"
