--- a/app/src/main/res/layout/activity_restaurant_detail.xml
+++ b/app/src/main/res/layout/activity_restaurant_detail.xml
@@ -4,20 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/hitammuda"
+    android:background="@color/birumuda"
     tools:context=".RestaurantDetailActivity">
+
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="576dp"
-        android:layout_height="324dp"
-        android:layout_marginStart="83dp"
-        android:layout_marginEnd="82dp"
-        android:layout_marginBottom="499dp"
+        android:layout_width="584dp"
+        android:layout_height="434.76dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginBottom="484.24dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/fotohiasan" />
+        app:srcCompat="@drawable/restaurantdetail_hiasan1" />
 
     <ImageView
         android:id="@+id/restaurantdetail_imageview_backbutton"
@@ -33,54 +32,87 @@
         android:clickable="true"
         android:onClick="pindahsplashactivity"/>
 
+    <TextView
+        android:id="@+id/restaurantdetail_textview_review"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="58dp"
+        android:layout_marginTop="25dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="Review"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/restaurantdetail_imageview_bigcard" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="584dp"
+        android:layout_height="434.76dp"
+        android:layout_marginTop="508dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/restaurantdetail_hiasan2" />
+
     <ImageView
         android:id="@+id/restaurantdetail_imageview_bigcard"
         android:layout_width="330dp"
         android:layout_height="340dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="239dp"
-        android:layout_marginEnd="41dp"
-        android:background="@drawable/kotaktransparan"
-        android:elevation="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="145dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView4" />
-
-    <TextView
-        android:id="@+id/restaurantdetail_textview_Jakarta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="52dp"
-        android:fontFamily="@font/poppins_medium"
-        android:text="Jakarta"
-        android:textColor="#FFFFFF"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/restaurantdetail_imageview_bigcard"
-        app:layout_constraintTop_toTopOf="@+id/restaurantdetail_imageview_bigcard" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/restaurantdetail_rectangle1" />
 
     <TextView
         android:id="@+id/restaurantdetail_textview_Yoshinoya"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/poppins_bold"
         android:text="Yoshinoya"
-        android:textColor="#FFFFFF"
+        android:textColor="#25242A"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="@+id/restaurantdetail_imageview_bigcard"
         app:layout_constraintTop_toTopOf="@+id/restaurantdetail_imageview_bigcard" />
+
+    <TextView
+        android:id="@+id/restaurantdetail_textview_Jakarta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="31dp"
+        android:fontFamily="@font/poppins_medium"
+        android:text="Jakarta"
+        android:textColor="#3F3F3F"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@+id/restaurantdetail_imageview_bigcard"
+        app:layout_constraintTop_toTopOf="@+id/restaurantdetail_textview_Yoshinoya" />
+
+    <TextView
+        android:id="@+id/restaurantdetail_textview_longtext"
+        android:layout_width="294dp"
+        android:layout_height="185dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="13dp"
+        android:fontFamily="@font/poppins_medium"
+        android:justificationMode="inter_word"
+        android:text="Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet."
+        android:textSize="9sp"
+        app:layout_constraintStart_toStartOf="@+id/restaurantdetail_imageview_bigcard"
+        app:layout_constraintTop_toBottomOf="@+id/restaurantdetail_textview_Yoshinoya" />
 
     <ImageView
         android:id="@+id/restaurantdetail_imageview_starbulet"
         android:layout_width="75dp"
         android:layout_height="30dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintStart_toEndOf="@+id/restaurantdetail_textview_Yoshinoya"
+        android:layout_marginStart="237dp"
+        android:layout_marginTop="27dp"
+        app:layout_constraintStart_toStartOf="@+id/restaurantdetail_imageview_bigcard"
         app:layout_constraintTop_toTopOf="@+id/restaurantdetail_imageview_bigcard"
-        app:srcCompat="@drawable/kotakputihkecil" />
+        app:srcCompat="@drawable/restaurantdetail_smallrectangle" />
 
     <ImageView
         android:id="@+id/restaurantdetail_imageview_star"
@@ -88,65 +120,90 @@
         android:layout_height="18.36dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/restaurantdetail_imageview_starbulet"
         app:layout_constraintStart_toStartOf="@+id/restaurantdetail_imageview_starbulet"
         app:layout_constraintTop_toTopOf="@+id/restaurantdetail_imageview_starbulet"
-        app:srcCompat="@drawable/bintang" />
+        app:srcCompat="@drawable/restaurantdetail_star" />
 
     <TextView
         android:id="@+id/restaurantdetail_textview_star"
         android:layout_width="36dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="4.42dp"
         android:layout_marginTop="12dp"
+        android:layout_marginEnd="7dp"
         android:layout_marginBottom="10dp"
         android:fontFamily="@font/poppins_medium"
         android:text="3.5 Star"
+        android:textColor="#DDDEE2"
         android:textSize="9sp"
         app:layout_constraintBottom_toBottomOf="@+id/restaurantdetail_imageview_starbulet"
+        app:layout_constraintEnd_toEndOf="@+id/restaurantdetail_imageview_starbulet"
         app:layout_constraintStart_toEndOf="@+id/restaurantdetail_imageview_star"
         app:layout_constraintTop_toTopOf="@+id/restaurantdetail_imageview_starbulet" />
 
-    <TextView
-        android:id="@+id/restaurantdetail_textview_longtext"
-        android:layout_width="294dp"
-        android:layout_height="185dp"
-        android:layout_marginStart="18dp"
-        android:fontFamily="@font/poppins_medium"
-        android:text="orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet."
-        android:textAlignment="viewStart"
-        android:textColor="#FFFFFF"
-        android:textSize="9sp"
-        app:layout_constraintStart_toStartOf="@+id/restaurantdetail_imageview_bigcard"
-        app:layout_constraintTop_toBottomOf="@+id/restaurantdetail_textview_Jakarta" />
-
     <ImageView
         android:id="@+id/restaurantdetail_imageview_plus"
-        android:layout_width="48dp"
+        android:layout_width="138dp"
         android:layout_height="48dp"
-        android:layout_marginStart="345dp"
-        android:layout_marginTop="735dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="107dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/addreview_plus" />
+        app:srcCompat="@drawable/restaurantdetail_addreview" />
 
     <TextView
-        android:id="@+id/restaurantdetail_textview_review"
+        android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="58dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="13dp"
         android:fontFamily="@font/poppins_bold"
-        android:text="Review"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/restaurantdetail_imageview_bigcard" />
+        android:text="Add Review"
+        android:textColor="#E2E3E6"
+        app:layout_constraintStart_toStartOf="@+id/restaurantdetail_imageview_plus"
+        app:layout_constraintTop_toTopOf="@+id/restaurantdetail_imageview_plus" />
+
+    <ImageView
+        android:id="@+id/imageView20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toEndOf="@+id/textView9"
+        app:layout_constraintTop_toTopOf="@+id/restaurantdetail_imageview_plus"
+        app:srcCompat="@drawable/restaurantdetail_plus" />
+
+    <ImageView
+        android:id="@+id/restaurantdetail_imageview_laporkanpengguna"
+        android:layout_width="210dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="49dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/restaurantdetail_laporkan" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="13dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="Laporkan Pengguna"
+        android:textColor="#E2E3E6"
+        app:layout_constraintStart_toStartOf="@+id/restaurantdetail_imageview_laporkanpengguna"
+        app:layout_constraintTop_toTopOf="@+id/restaurantdetail_imageview_laporkanpengguna" />
+
+    <ImageView
+        android:id="@+id/imageView22"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toEndOf="@+id/textView10"
+        app:layout_constraintTop_toTopOf="@+id/restaurantdetail_imageview_laporkanpengguna"
+        app:srcCompat="@drawable/restaurantdetail_danger" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
