--- a/app/src/main/res/layout/card_home.xml
+++ b/app/src/main/res/layout/card_home.xml
@@ -14,73 +14,72 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp">
-
-        <ImageView
-            android:id="@+id/cardhome_imageview_picture"
-            android:layout_width="175dp"
-            android:layout_height="149dp"
-            android:scaleType="centerCrop"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent"
-            card_view:layout_constraintVertical_bias="0.0"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        android:layout_height="150dp"
+        android:backgroundTint="#E5E6E9">
 
         <TextView
             android:id="@+id/cardhome_edittext_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="22dp"
             android:fontFamily="@font/poppins_bold"
             android:text="Pondok Bambu"
-            android:textColor="@color/black"
-            card_view:layout_constraintStart_toEndOf="@+id/cardhome_imageview_picture"
+            android:textColor="#25242A"
+            card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/cardhome_edittext_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="41dp"
             android:fontFamily="@font/poppins_medium"
             android:text="Kraksaan"
             android:textColor="@color/hitamagakmuda"
             android:textSize="12sp"
-            card_view:layout_constraintStart_toEndOf="@+id/cardhome_imageview_picture"
-            card_view:layout_constraintTop_toBottomOf="@+id/cardhome_edittext_title" />
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/cardhome_edittext_desc"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="8dp"
+            android:layout_width="195dp"
+            android:layout_height="47dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="59dp"
+            android:fontFamily="@font/poppins_medium"
             android:text="Pondok bambu adalah restoran bergaya tradisional yang menyajikan ikan sebagai menu utamanya"
+            android:textColor="#606060"
             android:textSize="9sp"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="1.0"
-            card_view:layout_constraintStart_toEndOf="@+id/cardhome_imageview_picture"
-            card_view:layout_constraintTop_toBottomOf="@+id/cardhome_edittext_location" />
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent" />
 
         <RatingBar
             android:id="@+id/cardhome_ratingbar_rating"
             style="@android:style/Widget.Material.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginStart="29dp"
+            android:layout_marginTop="3dp"
             android:maxHeight="20dp"
             android:minHeight="20dp"
             android:numStars="5"
-            android:progressTint="@color/yellowstar"
+            android:progressTint="#212B3F"
             android:rating="3"
             android:secondaryProgressTint="@android:color/transparent"
             android:stepSize="0.5"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/cardhome_edittext_desc" />
+
+        <ImageView
+            android:id="@+id/imageView23"
+            android:layout_width="9.26dp"
+            android:layout_height="15dp"
+            android:layout_marginEnd="17.74dp"
+            android:layout_marginBottom="68dp"
             card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintStart_toEndOf="@+id/cardhome_imageview_picture" />
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:srcCompat="@drawable/cardview_next" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
